--- a/pom.xml
+++ b/pom.xml
@@ -11,4 +11,13 @@
         <maven.compiler.target>18</maven.compiler.target>
         <exec.mainClass>com.mycompany.taller2juego.Taller2Juego</exec.mainClass>
     </properties>
+    
+    <dependencies>
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.5.2.Final</version>
+        </dependency>
+    </dependencies>
+    
 </project>
